--- a/part1.html
+++ b/part1.html
@@ -52,6 +52,10 @@
 
     <div class="bg-white rounded-xl shadow-lg p-8 md:p-12 w-full max-w-4xl text-left">
     
+        <nav class="mb-8 flex justify-center">
+            <a href="index.html" class="px-6 py-2 bg-blue-500 text-white font-semibold rounded-full hover:bg-blue-600 transition-colors duration-200 shadow-md">Return Home</a>
+        </nav>
+
         <header class="text-center mb-8">
             <h1 class="text-4xl font-bold text-gray-900 border-b-4 border-blue-500 pb-2">Aquatic Ecosystems</h1>
             <p class="text-lg text-gray-500 mt-2">The Hydrologic Cycle Drives the Whole Process</p>
@@ -79,6 +83,11 @@
                 <div class="mt-4 pl-4">
                     <h3 class="text-lg font-bold text-gray-800">Runoff and Infiltration</h3>
                     <p class="mt-2 text-gray-700">Once precipitation reaches the ground, it follows one of two primary paths. It can become <b>surface runoff</b>, flowing over the land and eventually collecting in streams, rivers, lakes, and oceans. Alternatively, it can soak into the ground in a process called <b>infiltration</b>. This water can then be stored as groundwater or continue to move beneath the surface, feeding springs and contributing to the flow of rivers.</p>
+                </div>
+
+                <div class="mt-4 pl-4">
+                    <h3 class="text-lg font-bold text-gray-800">A Local Example: The Prairie Water Cycle</h3>
+                    <p class="mt-2 text-gray-700">In West Central Saskatchewan during the peak of the crop growing season, the hydrologic cycle is a tangible process. The intense summer sun drives rapid evaporation from the numerous sloughs and ponds, while vast fields of wheat and canola contribute significant water vapor through transpiration. This moisture-rich air rises and undergoes condensation, forming the classic cumulus clouds that dot the prairie sky. These clouds often lead to localized thunderstorms, providing crucial precipitation for the crops. The rain falls onto the land, and the fertile, well-tilled soil absorbs a great deal through infiltration. Any excess water may become surface runoff, collecting in the low-lying areas and feeding the cycle once again.</p>
                 </div>
             </section>
         </div>
@@ -211,4 +220,8 @@
     });
 </script>
 </body>
+</html>
+
+</body>
+
 </html>
