--- a/index.html
+++ b/index.html
@@ -10,20 +10,33 @@
         /* Use Inter font */
         body {
             font-family: 'Inter', sans-serif;
+            /* Add a background image with a semi-transparent overlay for readability */
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://placehold.co/1920x1080/4f5f5f/EFE?text=Forest');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
-    <div class="max-w-xl w-full p-8 bg-white rounded-xl shadow-lg text-center">
+<body class="flex items-center justify-center min-h-screen p-4">
+    <div class="max-w-xl w-full p-8 bg-white rounded-xl shadow-lg text-center relative z-10">
         <!-- Main title for the textbook -->
         <h1 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-6 leading-tight">
             Welcome to Environmental Science 20 Digital Textbook
         </h1>
         
-        <!-- Button to navigate to the next page -->
-        <a href="part1.html" class="inline-block px-8 py-4 mt-6 text-lg font-semibold text-white bg-green-500 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
-            Start Learning
-        </a>
+        <!-- Container for the buttons -->
+        <div class="flex flex-col space-y-4">
+            <!-- Button to navigate to the Hydrologic Cycle section -->
+            <a href="part1.html" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-green-500 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
+                Hydrologic Cycle
+            </a>
+            
+            <!-- Button to navigate to the Aquatic Ecosystems section -->
+            <a href="part2.html" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-blue-500 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+                Aquatic Ecosystems
+            </a>
+        </div>
     </div>
 </body>
 </html>
