--- a/index.html
+++ b/index.html
@@ -1,42 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Environmental Science 20</title>
-    <!-- Load Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Use Inter font */
-        body {
-            font-family: 'Inter', sans-serif;
-            /* Add a background image with a semi-transparent overlay for readability */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://placehold.co/1920x1080/4f5f5f/EFE?text=Forest');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Environmental Science 20</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1600&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #2e3d2f;
+    }
+    header {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 2rem;
+ font-size: 2.5rem;
+      color: #3e5c3a;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #5a7d5a;
+    }
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 2rem;
+      gap: 1rem;
+    }
+    nav a {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 1rem 2rem;
+      text-decoration: none;
+      color: #3e5c3a;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+    }
+    nav a:hover {
+      background-color: #dbead3;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.85);
+      font-size: 0.9rem;
+      color: #4a5f4a;
+    }
+  </style>
 </head>
-<body class="flex items-center justify-center min-h-screen p-4">
-    <div class="max-w-xl w-full p-8 bg-white rounded-xl shadow-lg text-center relative z-10">
-        <!-- Main title for the textbook -->
-        <h1 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-6 leading-tight">
-            Welcome to Environmental Science 20 Digital Textbook
-        </h1>
-        
-        <!-- Container for the buttons -->
-        <div class="flex flex-col space-y-4">
-            <!-- Button to navigate to the Hydrologic Cycle section -->
-            <a href="part1.html" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-green-500 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
-                Hydrologic Cycle
-            </a>
-            
-            <!-- Button to navigate to the Aquatic Ecosystems section -->
-            <a href="part2.html" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-blue-500 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
-                Aquatic Ecosystems
-            </a>
-        </div>
-    </div>
+<body>
+  <header>
+    <h1>Environmental Science 20</h1>
+    <p>Explore the chapters below to dive into key environmental topics</p>
+  </header>
+
+  <nav>
+    chapter1.htmlChapter 1: Introduction</a>
+    chapter2.htmlChapter 2: Ecosystems</a>
+    #Chapter 3: Climate Change</a>
+    #Chapter 4: Sustainability</a>
+    #Chapter 5: Human Impact</a>
+    #Chapter 6: Future Solutions</a>
+  </nav>
+
+  <footer>
+    &copy; 2025 Scott Carey | Environmental Science 20 Digital Textbook
+  </footer>
 </body>
 </html>
+
+</html>
+
