--- a/part2.html
+++ b/part2.html
@@ -22,10 +22,12 @@
 <body class="bg-gray-100 flex flex-col min-h-screen items-center justify-center p-4 sm:p-6 md:p-8">
 
     <div class="bg-white rounded-xl shadow-lg p-8 md:p-12 w-full max-w-4xl text-left">
-        
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-900 border-b-4 border-blue-500 pb-2">Aquatic Ecosystems Textbook</h1>
-            <p class="text-lg text-gray-500 mt-2">A Comprehensive Guide to Water Resource Management</p>
+            <a href="index.html" class="inline-block mb-6 bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 rounded-lg shadow-md transition-colors">
+                Home
+            </a>
+            <h1 class="text-4xl font-bold text-gray-900 border-b-4 border-blue-500 pb-2">Types of Aquatic Ecosystems</h1>
+            <p class="text-lg text-gray-500 mt-2">Freshwater, Marine, and Estuaries</p>
         </header>
 
         <div class="text-content">
@@ -233,7 +235,4 @@
     </script>
 
 </body>
-</html>
-</body>
-
 </html>
