--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
                             throw new Error(`HTTP error! status: ${response.status}`);
                         }
                         const text = await response.text();
-                        // Extract content from within the body tags
                         const parser = new DOMParser();
                         const doc = parser.parseFromString(text, 'text/html');
                         page.content = doc.body.textContent || '';
                     });
                     await Promise.all(fetchPromises);
-                    messageBox.textContent = ''; // Clear message after loading
+                    messageBox.textContent = '';
                 } catch (error) {
                     console.error('Failed to fetch pages:', error);
                     messageBox.textContent = 'Error loading content for search.';
@@ -114,12 +113,30 @@
 
                 let foundResults = false;
                 textbookPages.forEach(page => {
-                    if (page.content.toLowerCase().includes(searchTerm)) {
+                    const contentLower = page.content.toLowerCase();
+                    let index = contentLower.indexOf(searchTerm);
+                    let count = 0;
+
+                    while (index !== -1 && count < 5) { // Limit results to prevent overload
                         foundResults = true;
+                        const start = Math.max(0, index - 50);
+                        const end = Math.min(page.content.length, index + searchTerm.length + 50);
+                        const snippet = page.content.substring(start, end).trim();
+
                         const resultItem = document.createElement('div');
                         resultItem.className = 'p-2 bg-stone-100 rounded-lg mb-2';
-                        resultItem.innerHTML = `<a href="${page.url}" class="font-semibold text-lime-800 hover:underline">${page.title}</a>`;
+                        
+                        // Create a unique ID from the search term
+                        const anchorId = searchTerm.replace(/\s+/g, '-');
+                        
+                        resultItem.innerHTML = `
+                            <a href="${page.url}#${anchorId}" class="font-semibold text-lime-800 hover:underline">${page.title}</a>
+                            <p class="text-xs text-gray-600 mt-1">...${snippet}...</p>
+                        `;
                         resultsDiv.appendChild(resultItem);
+
+                        index = contentLower.indexOf(searchTerm, index + 1);
+                        count++;
                     }
                 });
 
@@ -131,3 +148,4 @@
     </script>
 </body>
 </html>
+
