--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
 
         <div>
             <h2 class="text-2xl font-semibold text-stone-700 mb-4">Terrestrial Ecosystems</h2>
-            <div class="grid grid-cols-1 gap-4">
-                <!-- Placeholder row -->
-                <div class="p-4 bg-gray-300 text-gray-700 font-semibold rounded-lg shadow-md">
-                    More chapters coming soon...
-                </div>
+            <div class="p-4 bg-gray-300 text-gray-700 font-semibold rounded-lg shadow-md">
+                More chapters coming soon...
             </div>
         </div>
     </div>
@@ -113,19 +110,42 @@
                 let foundResults = false;
                 textbookPages.forEach(page => {
                     if (page.doc) {
-                        const headings = page.doc.querySelectorAll('h1[id], h2[id], h3[id], h4[id]');
-                        headings.forEach(heading => {
-                            if (heading.textContent.toLowerCase().includes(searchTerm)) {
-                                foundResults = true;
-                                const resultItem = document.createElement('div');
-                                resultItem.className = 'p-2 bg-stone-100 rounded-lg mb-2';
-                                
+                        const pageContent = page.doc.body.textContent.toLowerCase();
+                        const searchTermIndex = pageContent.indexOf(searchTerm);
+
+                        if (searchTermIndex !== -1) {
+                            foundResults = true;
+                            
+                            // Find the closest preceding heading with an ID
+                            const headings = page.doc.querySelectorAll('h1[id], h2[id], h3[id], h4[id], h5[id], h6[id]');
+                            let closestHeading = null;
+                            let closestHeadingIndex = -1;
+
+                            headings.forEach(heading => {
+                                const headingText = heading.textContent.toLowerCase();
+                                const headingIndex = pageContent.indexOf(headingText);
+                                if (headingIndex !== -1 && headingIndex < searchTermIndex && headingIndex > closestHeadingIndex) {
+                                    closestHeading = heading;
+                                    closestHeadingIndex = headingIndex;
+                                }
+                            });
+
+                            const resultItem = document.createElement('div');
+                            resultItem.className = 'p-2 bg-stone-100 rounded-lg mb-2';
+
+                            if (closestHeading) {
+                                // Link to the specific heading ID
                                 resultItem.innerHTML = `
-                                    <a href="${page.url}#${heading.id}" class="font-semibold text-lime-800 hover:underline">${page.title}: ${heading.textContent}</a>
+                                    <a href="${page.url}#${closestHeading.id}" class="font-semibold text-lime-800 hover:underline">${page.title}: ${closestHeading.textContent}</a>
                                 `;
-                                resultsDiv.appendChild(resultItem);
+                            } else {
+                                // Fallback to linking to the top of the page if no preceding heading is found
+                                resultItem.innerHTML = `
+                                    <a href="${page.url}" class="font-semibold text-lime-800 hover:underline">${page.title}</a>
+                                `;
                             }
-                        });
+                            resultsDiv.appendChild(resultItem);
+                        }
                     }
                 });
 
@@ -137,4 +157,5 @@
     </script>
 </body>
 </html>
+
 
