--- a/part3.html
+++ b/part3.html
@@ -36,7 +36,7 @@
     <!-- Sticky Header/Banner -->
     <header id="main-header" class="fixed top-0 left-0 right-0 z-50 bg-slate-800 text-white shadow-xl py-2 px-4 flex items-center justify-between rounded-b-lg">
         <!-- Home Button -->
-        <a href="#" class="inline-block bg-slate-600 hover:bg-slate-700 text-white font-semibold py-2 px-4 rounded-lg shadow transition-colors">
+        <a href="index.html" class="inline-block bg-slate-600 hover:bg-slate-700 text-white font-semibold py-2 px-4 rounded-lg shadow transition-colors">
             Home
         </a>
 
@@ -880,6 +880,5 @@
         });
     </script>
 </body>
-</html>
 </html>
 
