--- a/index.html
+++ b/index.html
@@ -126,17 +126,33 @@
                         Review Activity: Ecosystem Builder
                     </a>
 
-                    <!-- NEW PODCAST LINK ADDED HERE -->
                     <a href="tepodcast.html" class="chapter-link p-5 bg-purple-600 text-white font-semibold rounded-xl shadow-lg hover:bg-purple-700">
                         <span class="text-xs font-light opacity-80 block mb-1">Podcast</span>
                         Terrestrial Ecosystem - The Podcast
+                    </a>
+                </div>
+            </div>
+
+            <!-- Unit 3: NEW SECTION ADDED HERE -->
+            <div class="mb-0">
+                <h2 class="text-2xl font-bold text-gray-700 mb-6 border-b-2 border-indigo-200 pb-3 flex items-center">
+                    <!-- Cloud/Atmosphere Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
+                    </svg>
+                    Unit 3: Atmosphere and Human Impact
+                </h2>
+                <div class="grid grid-cols-1 gap-4">
+                    <a href="atm1.html" class="chapter-link p-5 bg-indigo-500 text-white font-semibold rounded-xl shadow-lg hover:bg-indigo-600">
+                        <span class="text-xs font-light opacity-80 block mb-1">Chapter 7</span>
+                        Atmosphere, Climate and Human Stewardship
                     </a>
                     
                     <div class="p-4 bg-gray-100 text-gray-600 font-medium rounded-xl border border-gray-300 shadow-inner italic flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
-                        More chapters and units coming soon...
+                        More Unit 3 chapters coming soon...
                     </div>
                 </div>
             </div>
@@ -231,6 +247,21 @@
                         <p>**Biodiversity** is the variety of life in an area. It is measured at three levels: **genetic diversity** (variation within a species), **species richness** (number of different species), and **ecosystem diversity** (variety of habitats). Higher diversity generally leads to more stable ecosystems.</p>
                         <h3 id="hotspots" class="text-xl font-semibold mt-4">Biodiversity Hotspots</h3>
                         <p>A **biodiversity hotspot** is a biogeographic region with significant levels of biodiversity that is threatened by human habitation. These areas are critical for global conservation efforts due to their high number of endemic species.</p>
+                    `
+                },
+                // --- NEW UNIT 3 DATA ADDED FOR SEARCH ---
+                {
+                    unit: 'Atmosphere and Human Impact',
+                    chapter: 'Chapter 7',
+                    title: 'Atmosphere, Climate and Human Stewardship',
+                    url: 'atm1.html',
+                    htmlContent: `
+                        <h3 id="atmosphere_layers" class="text-xl font-semibold mt-4">Layers of the Atmosphere</h3>
+                        <p>The atmosphere is divided into layers based on temperature trends: the **troposphere** (where weather occurs), stratosphere (home to the **ozone** layer), mesosphere, and thermosphere.</p>
+                        <h3 id="climate_change" class="text-xl font-semibold mt-4">Climate Change and Greenhouse Gases</h3>
+                        <p>Human activities are altering the composition of the atmosphere. The **greenhouse effect** is intensified by emissions of **carbon dioxide** and methane, leading to global warming and climate instability.</p>
+                        <h3 id="stewardship" class="text-xl font-semibold mt-4">Human Stewardship</h3>
+                        <p>Stewardship involves the responsible planning and management of resources. Reducing **ecological footprints** and transitioning to renewable energy are key aspects of modern environmental stewardship.</p>
                     `
                 }
             ];
@@ -352,4 +383,3 @@
     </script>
 </body>
 </html>
-
