--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
                         <span class="text-xs font-light opacity-80 block mb-1">Chapter 7</span>
                         Atmosphere, Climate and Human Stewardship
                     </a>
+
+                    <!-- NEW PODCAST BUTTON -->
+                    <a href="atm2.html" class="chapter-link p-5 bg-purple-600 text-white font-semibold rounded-xl shadow-lg hover:bg-purple-700">
+                        <span class="text-xs font-light opacity-80 block mb-1">Podcast</span>
+                        Atmosphere & Climate: The Podcast
+                    </a>
                     
                     <div class="p-4 bg-gray-100 text-gray-600 font-medium rounded-xl border border-gray-300 shadow-inner italic flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -262,6 +268,16 @@
                         <p>Human activities are altering the composition of the atmosphere. The **greenhouse effect** is intensified by emissions of **carbon dioxide** and methane, leading to global warming and climate instability.</p>
                         <h3 id="stewardship" class="text-xl font-semibold mt-4">Human Stewardship</h3>
                         <p>Stewardship involves the responsible planning and management of resources. Reducing **ecological footprints** and transitioning to renewable energy are key aspects of modern environmental stewardship.</p>
+                    `
+                },
+                {
+                    unit: 'Atmosphere and Human Impact',
+                    chapter: 'Podcast',
+                    title: 'Atmosphere & Climate: The Podcast',
+                    url: 'atm2.html',
+                    htmlContent: `
+                        <h3 id="podcast_intro" class="text-xl font-semibold mt-4">Listening to the Atmosphere</h3>
+                        <p>In this episode, we explore the dynamic nature of our atmosphere, discussing weather patterns, climate change, and how human actions influence the air we breathe.</p>
                     `
                 }
             ];
@@ -383,3 +399,4 @@
     </script>
 </body>
 </html>
+
